--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "node": ">0.10.x"
   },
   "devDependencies": {
-    "express": ">=3.0.0",
     "grunt": "~0.4.x",
     "grunt-contrib-clean": ">=0.4.0rc6",
     "grunt-contrib-copy": "~0.4.x",
@@ -27,8 +26,11 @@
     "grunt-replace": "~0.4.0"
   },
   "scripts": {
-    "start": "node static-server.js"
+    "start": "node lib/main.js"
   },
-  "dependencies": { 
+  "dependencies": {
+    "express": "~3.2.0",
+    "mongoskin": "~0.5.0",
+    "socket.io": "~0.9.14"
   }
 }
